# aiogram_template

./: .env  .env.example  README.md  pyproject.toml  requirements.txt  test.db
app/: __main__.py  main.py
app/database/: __init__.py  uow.py
app/database/core/: __init__.py  engine.py  manager.py  session.py
app/database/models/: __init__.py  base.py  user.py
app/database/repositories/: base.py  user.py
app/database/requests/: __init__.py  add.py  delete.py  get.py  update.py
app/database/tools/: __init__.py  connection.py  db_connection.py  table_name.py
app/exceptions/: __init__.py  user_update.py
app/factory/: bot.py  dispatcher.py
app/filters/: __init__.py  admin_protect.py  chat_type.py  data_length.py
app/handlers/: __init__.py
app/handlers/chat/: __init__.py
app/handlers/chat/admin/: __init__.py  commands.py  start.py
app/handlers/chat/user/: __init__.py  callbacks.py  commands.py  messages.py
app/handlers/errors/: telegram.py
app/keyboards/: __init__.py  builder.py  callback_factory.py  inline.py
app/locales/en/: bot.ftl
app/locales/ru/: bot.ftl
app/middlewares/: __init__.py  create_user.py  reporting.py  session.py  throttling.py
app/secure/: __init__.py  config_reader.py
app/services/: user_service.py
app/states/: registration.py
app/telegram/: __init__.py
app/telegram/handlers/: __init__.py
app/telegram/handlers/errors/: common.py  (+2 more)
app/telegram/keyboards/: __init__.py
app/telegram/middlewares/: __init__.py  db.py  throttling.py
app/telegram/states/: registration.py
app/utils/: __init__.py  set_commands.py
(+5 files in other folders)
